MDEV-36980 Assertion `thd->mdl_context.is_lock_owner()...fails in close_thread_table

The problem is that a few constructs are missing from atomic create table
patch that is not yet committed:

- table_creation_was_logged is now set to 1 when logging create temporary.
- Testing for BINLOG_FORMAT_STMT changed to binlog_create_tmp_table() to
  take create_tmp_table_binlog_formats value into account.
- When logging the table creation of temporary tables to the binlog, the
  source table was used instead of the newly temporary table.